<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/background">
  
  <TableRow
  	android:id="@+id/rowTitle"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:gravity="center"
  	android:padding="10dp"
  	>
  		<TextView
  			android:id="@+id/signUpTitle"
  			android:layout_width="fill_parent"
  			android:layout_height="match_parent"
  			android:text="@string/newuser"
  			android:textSize="30sp"
  			android:gravity="center"
  			android:textColor="#000000"
  		>	
  	</TextView>
  </TableRow>
  
  <TableRow
  	android:id="@+id/row1"
  	android:layout_height="wrap_content"
  	android:layout_width="wrap_content"
  >
  	<TextView
  		android:id="@+id/username"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/txtUname"
  		android:textColor="#000000"
  		android:padding="10dp"
  		android:textSize="16sp"
  	></TextView>
  	<EditText
  		android:id="@+id/editUsername"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
		android:layout_weight="2"
  		android:padding="10dp"
  	></EditText>
  </TableRow>
  
  <TableRow
  	android:id="@+id/row2"
  	android:layout_height="wrap_content"
  	android:layout_width="wrap_content"
  >
  	<TextView
  		android:id="@+id/password"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/txtPassword"
  		android:textColor="#000000"
  		android:padding="10dp"
  		android:textSize="16sp"
  		
  		>
  	</TextView>
  	<EditText
  		android:id="@+id/editPassword"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
		android:layout_weight="2"
  		android:padding="10dp"
  		android:textColor="#000000"
  		android:password="true"
  	></EditText>
  </TableRow>
  
  <TableRow
  	android:id="@+id/row3"
  	android:layout_height="wrap_content"
  	android:layout_width="wrap_content"
  >
  	<TextView
  		android:id="@+id/email"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/email"
  		android:padding="10dp"
  		android:textSize="16sp"
  		android:textColor="#000000"
  	></TextView>
  	<EditText
  		android:id="@+id/editEmail"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
		android:layout_weight="2"
  		android:padding="10dp"
  		android:textColor="#000000"
  	></EditText>
  </TableRow>
  
  <TableRow
  	android:id="@+id/row4"
  	android:layout_height="fill_parent"
  	android:layout_width="fill_parent"
  	android:gravity="center"
  >
  	<Button
  		android:id="@+id/buttonRegister"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:padding="10dp"
  		android:text="@string/buttonRegister"
  		android:layout_weight="1"
  	></Button>
  	<Button
  		android:id="@+id/buttonCancel"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:padding="10dp"
  		android:text="@string/buttonCancel"
  		android:layout_weight="1.5"
  	></Button>
  </TableRow>
  
</TableLayout>
