<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@drawable/background">
  
  	<TableRow
  		android:id="@+id/adminTitle"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:gravity="center"
  		android:padding="10dp"
  	>
  		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/adminTitle"
		    android:gravity="center"
		    android:textSize="20sp"
		    android:textColor="#000000"
    />
  	</TableRow>
    <TableRow
    	android:id="@+id/row2"
    >
    	<TextView
    		android:id="@+id/txtPassword"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:text="@string/txtPassword"
    		android:padding="10dp"
    		android:textColor="#000000"
    	></TextView>
    	
    	<EditText
    		android:id="@+id/editPassword"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"
    		android:layout_weight="0.5"
    		android:padding="10dp"
    		style="@android:style/Widget.EditText"
    		android:password="true"
    		android:textColor="#000000"
    	></EditText>
    </TableRow>
    <TableRow
    	android:id="@+id/row3"
    	android:layout_gravity="center"
    >
    	<Button
    		android:id="@+id/buttonLogin"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/buttonLogin"
    		android:layout_gravity="center"
    		android:layout_weight="1"
    		android:padding="10dp"
    	></Button>
    	<Button
    		android:id="@+id/buttonCancel"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/buttonCancel"
    		android:layout_gravity="center"
    		android:layout_weight="1"
    		android:padding="10dp"
    	></Button>
    </TableRow>
</TableLayout>
